blocks/hero/hero.css
.hero.block {
  background-repeat: no-repeat;
  background-size: contain;
  background-position: center center;
  height: 0;
  width: 100%;
  max-width: 1600px;
  margin: 0 auto;
  overflow: hidden;
  position: relative;
  padding-top: 50%;
  display: flex;
}

.hero-wrapper {
  margin: 0 auto;
}

.hero picture {
  display: none;
}

.hero-content {
  left: -10px;
  display: flex;
  flex-direction: column;
  justify-content: flex-end;
  align-items: center;
  position: relative;
  height: 100%;
}

.content-bg {
  background-image: url("/icons/bg.svg");
  background-repeat: no-repeat;
  background-size: 100% auto;
  background-position: center top;
  position: absolute;
  bottom: 0;
  animation: slide-in 0.5s forwards;
}

@keyframes slide-in {
  from {
    transform: translateX(100%);
  }

  to {
    transform: translateX(0);
  }
}

.content-wrap {
  display: flex;
  flex-direction: column;
  justify-content: flex-end;
  max-width: 52%;
  padding-bottom: 36px;
}

.hero-spacer {
  width: 730px;
  height: 350px;
}

.hero h1 {
  font-family: var(--heading-font-family);
  font-weight: 300;
  color: #ffaf00;
  font-size: 36px;
  line-height: 40px;
  margin-bottom: 20px;
  visibility: inherit;
  position: relative;
  animation: delay-display-h1 0.6s ease 0.6s forwards;
  opacity: 0;
}

.hero p {
  font-size: 16px;
  color: #fff;
  visibility: inherit;
  animation: delay-display-p 1s ease 1s forwards;
  opacity: 0;
  position: relative;
}

@keyframes delay-display-h1 {
  0% {
    opacity: 0;
    top: 8px;
  }

  100% {
    opacity: 1;
    top: 0;
  }
}

@keyframes delay-display-p {
  0% {
    opacity: 0;
    top: 8px;
  }

  100% {
    opacity: 1;
    top: 0;
  }
}

@media (max-width: 767px) {
  .hero.block {
    height: auto;
    background-size: cover;
  }
}

@media (max-width: 1023px) {
  .hero.block h1 {
    font-size: 26px;
    line-height: 1;
    margin-bottom: 10px;
    opacity: 1;
    visibility: inherit;
    transform: translate(0, 0);
  }

  .hero-content {
    margin-left: 5px;
  }

  .content-bg {
    left: -16vw;
  }

  .hero-spacer {
    width: 100vw;
    height: 30vw;
  }

  .content-wrap {
    margin-left: 7vw;
  }
}

@media only screen and (min-width: 768px) and (max-width: 1023px) {
  .hero-content {
    align-items: flex-start;
  }

  .content-wrap.hero-spacer h1 {
    font-size: 26px;
    line-height: 1;
    margin-bottom: 10px;
  }

  .content-wrap.hero-spacer h1 br {
    display: none;
  }

  .content-wrap.hero-spacer p {
    font-size: 14px;
  }
}

@media only screen and (max-width: 767px) {
  .hero-content {
    align-items: flex-start;
  }

  .content-bg {
    left: -12vw;
  }

  .hero-spacer {
    width: 100vw;
    height: 30vw;
  }

  .content-wrap {
    width: unset;
    padding-bottom: 2vw;
    margin-left: 9vw;
    max-width: unset;
    overflow: hidden;
  }

  .hero .hero-spacer p {
    display: none;
  }

  .dynamic-content {
    width: 92vw;
    max-width: 1200px;
    margin: 0 auto;
    padding: 36px 0 0;
  }
}

@media only screen and (min-width: 768px) {
  .dynamic-content {
    display: none;
  }
}

